topButtons visibility bug fixed up

--- a/src/sections/common/topButtons.css
+++ b/src/sections/common/topButtons.css
@@ -4,6 +4,7 @@
   position: fixed;
   justify-content: space-between;
   align-items: center;
+  z-index: 999;
 }
 
 .icon-button {
@@ -12,7 +13,7 @@
   height: 60px;
   align-items: center;
   justify-content: center;
-  font-size: 25px;
+  font-size: 30px;
   color: white;
   cursor: pointer;
 }
